[package]
name = "find_hash"
version = "0.1.0"
edition = "2021"
description = "A high-performance, offline hash type identification tool."
license = "GPL-3.0"
repository = "https://github.com/DhanushNehru/find_hash"
homepage = "https://github.com/DhanushNehru/find_hash"
documentation = "https://docs.rs/find_hash"
readme = "README.md"
keywords = ["hash", "security", "cli", "identification", "cracker"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
clap = { version = "=4.0.32", features = ["derive"] }
regex = "1.7"
colored = "=2.0.0"
once_cell = "1.17"
serde = { version = "=1.0.150", features = ["derive"] }
serde_json = "=1.0.90"
quote = "=1.0.35"
proc-macro2 = "=1.0.80"
syn = { version = "=2.0.50", features = ["full", "fold", "visit"] }
itoa = "=1.0.10"
ryu = "=1.0.18"
